# fast_fmt

./: Cargo.toml  README.md
src/: consts.rs  encoding.rs  int_impls.rs  lib.rs  macros.rs  std_impls.rs  transform.rs
